// import { compileScss } from '@/sass'
// import { getCodegenOptions } from '@icestack/config'

// const baseDir = path.resolve(scssDir, 'components')

// const coms = (await fg(path.resolve(baseDir, '**/*.scss'))).map((x) => {
//   return {
//     name: path.relative(baseDir, x),
//     filename: x
//   }
// })
// describe.skip.each(coms)('$name prefixer', ({ filename }) => {
//   // it('snap', async () => {
//   //   const { css } = await compileScss(
//   //     filename,
//   //     getCodegenOptions({
//   //       prefix: 'som-'
//   //     })
//   //   )
//   //   expect(css).toMatchSnapshot()
//   // })
// })

describe('name of the group', () => {
  it('should ', () => {})
})
